fix form display on small screens

--- a/chores/static/chores/css/chores.css
+++ b/chores/static/chores/css/chores.css
@@ -6,6 +6,23 @@ div.controls>form {
     flex-grow: 1;
 }
 
+div.controls>form .button {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+@media only screen and (max-width: 720px) {
+    div.controls {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    div.controls>form *:not(:last-child) {
+        margin-bottom: 0.5em;
+    }
+}
+
 details {
     margin: 1em 0;
     padding: 0 1em;
